# NewSite

./: Blog1.html  CLAUDE.md  CodeHome.html  DataMgr2.html  Edit.md  Explore.html  ExploreCode.html  ExplorePrototype.html  ExploreRust.html  Help1.html  Help_CMake.html  Help_Cargo.html  Help_ChatGPT.html  Help_DotNet.html  Help_Git.html  Help_GitHub.html  Help_PowerShell.html  Help_RegEx.html  Help_SiteNav.html  Help_VSCode.html  Local State  NewSite.sln  PageHost.html  PagePrototype.html  PyCode.txt  README.md  RustHome.html  SiteDemo.html  SiteDesign.html  SiteGlossary.html  SiteHome.html  SiteMap.html  SiteReferences.html  Test1.html  Test2.html  font-compare.html  machineid  server_err.txt
Basics/: BasicsBites_Glossary.html  BasicsChanges.html  BasicsCodeStory_Concurrency.html  BasicsCodeStory_ControlFlow.html  BasicsCodeStory_Data.html  BasicsCodeStory_ErrorHandling.html  BasicsCodeStory_Functions.html  BasicsCodeStory_Generics.html  BasicsCodeStory_Lambdas.html  BasicsCodeStory_Memory.html  BasicsCodeStory_Metaprogramming.html  BasicsCodeStory_Modules.html  BasicsCodeStory_Operators.html  BasicsCodeStory_Prologue.html  BasicsCodeStory_Variables.html  BasicsDecCodeStory_Combinators.html  BasicsDecCodeStory_Concurrency.html  BasicsDecCodeStory_Expressions.html  BasicsDecCodeStory_Functions.html  BasicsDecCodeStory_Lazy.html  BasicsDecCodeStory_Monads.html  BasicsDecCodeStory_Patterns.html  BasicsDecCodeStory_Persistence.html  BasicsDecCodeStory_Projects.html  BasicsDecCodeStory_Prologue.html  BasicsDecCodeStory_Queries.html  BasicsDecCodeStory_Recursion.html  BasicsDecCodeStory_TypeClasses.html  BasicsDecCodeStory_Types.html  BasicsGlossary.html  BasicsHome.html  BasicsImpCodeStory_Concurrency.html  BasicsImpCodeStory_ControlFlow.html  BasicsImpCodeStory_Data.html  BasicsImpCodeStory_ErrorHandling.html  BasicsImpCodeStory_Functions.html  BasicsImpCodeStory_Generics.html  BasicsImpCodeStory_Lambdas.html  BasicsImpCodeStory_Memory.html  BasicsImpCodeStory_Metaprogramming.html  (+37 more)
Blogs/: Blog.html  Blog_CommCompare.html  Blog_DisthinguishedRust.html  Blog_Prototype.html  Post_CommCompare.html  Post_RustData.html  Post_RustStrings.html  Post_RustTooling.html
CSharp/: CSharpBites_Additions.html  CSharpBites_Data.html  CSharpBites_Execution.html  CSharpBites_Generics.html  CSharpBites_Glossary.html  CSharpBites_Hello.html  CSharpBites_HelloCSharp.html  CSharpBites_Intro.html  CSharpBites_Iteration.html  CSharpBites_Objects.html  CSharpBites_References.html  CSharpBites_Refs.html  CSharpChanges.html  CSharpHome.html  CSharpRepos.html  CSharpStory_ClassRelationships.html  CSharpStory_Classes.html  CSharpStory_Data.html  CSharpStory_Generics.html  CSharpStory_Interesting.html  CSharpStory_Libraries.html  CSharpStory_LibraryCollections.html  CSharpStory_LibraryFileSystem.html  CSharpStory_LibraryStreams.html  CSharpStory_LibraryThreads.html  CSharpStory_Models.html  CSharpStory_Network.html  CSharpStory_NewThings.html  CSharpStory_Operations.html  CSharpStory_Prologue.html  CSharpStory_Reflection.html  CSharpStory_Survey.html  CleanPage.md  CsBites_Execution.html  ExploreCSharp.html  ExploreReposCSharp.html  RepoCSharp_BasicDemos.html  RepoCSharp_BlockingQueue.html  RepoCSharp_CodeWebifier.html  RepoCSharp_CommPrototype.html  (+15 more)
Code/: AIBites_AI_Links.html  AIBites_AI_Self_Assessment.html  AIBites_AgentAI.html  AIBites_AgenticAI.html  AIBites_ChatBotAI.html  AIBites_CodeAI.html  AIBites_ContextPrune.html  AIBites_Introduction.html  AIBites_LLM_API.html  AIBites_PromptPatterns.html  AIBites_SkillsAI.html  AIBites_SpecDev.html  AIBites_Useage_Examples.html  AIStory_API.html  AIStory_Agents.html  AIStory_Caching.html  AIStory_Concepts.html  AIStory_Context.html  AIStory_Models.html  AIStory_Output.html  AIStory_Prologue.html  AIStory_Prompts.html  AIStory_Reliability.html  AIStory_Streaming.html  AIStory_Tokens.html  AIStory_Tools.html  AIWorkflows_Analysis.html  AIWorkflows_CodeOrg.html  AIWorkflows_CodeSmells.html  AIWorkflows_Dependency.html  AIWorkflows_Introduction.html  (+95 more)
Code/Basics/Hello/: CMakeLists.txt
Code/Basics/Hello/src/: HelloWin.cpp
Code/C++/DirNav/: CMakeLists.txt  WinDirTraversal.h  main.cpp
Code/C++/Hello/: CMakeLists.txt
Code/C++/Hello/src/: Hello.cpp
Code/C++/NameConventions/: CMakeLists.txt  naming_checker.cpp
Code/C++/TextFinder/: CMakeLists.txt  CmdLine.ixx  DirNav.ixx  README.md  TextFinder.ixx  main.cpp
Code/C++/TextFinder/.claude/commands/: sdd_feature.md  sdd_init.md  sdd_plan.md
Code/C++/TextFinder/.sdd/: constitution.md
Code/C++/TextFinder/archive/: CmdLine.h  DirNav.h  TextFinder.h
Code/Projects/PageValidator/CppPageValidator/entry_point/: CMakeLists.txt  Spec.md
Code/Projects/PageValidator/CppPageValidator/entry_point/src/: main.cpp
Code/Projects/TextFinder/CppTextFinder/EntryPoint/: CMakeLists.txt
Code/_template_cpp/EntryPoint/: CMakeLists.txt  Notes.md  Spec.md
Code/_template_cpp/EntryPoint/src/: main.cpp  test.cpp
Code/_template_cpp/Part1/: CMakeLists.txt  Notes.md
Code/_template_cpp/Part1/src/: Part1.ixx  test.cpp
Tools/CodeMetrics/PageValidator/CppPageValidator/: CMakeLists.txt  Constitution.md  README.md
Tools/CodeMetrics/PageValidator/CppPageValidator/lexer/: CMakeLists.txt
Tools/CodeMetrics/PageValidator/CppPageValidator/lexer/src/: test.cpp
Tools/CodeMetrics/PageValidator/CppPageValidator/tokenizer/: CMakeLists.txt
Tools/CodeMetrics/PageValidator/CppPageValidator/tokenizer/src/: test.cpp
Tools/CodeMetrics/PageValidator/CppPageValidator/validator/: CMakeLists.txt
Tools/CodeMetrics/TextFinder/CppTextFinder/CommandLine/: CMakeLists.txt  Notes.md
Tools/CodeMetrics/TextFinder/CppTextFinder/DirNav/: CMakeLists.txt  Notes.md
Tools/CodeMetrics/TextFinder/CppTextFinder/DirNav/src/: DirNav.ixx
Tools/CodeMetrics/TextFinder/CppTextFinder/Output/: CMakeLists.txt  Notes.md
Tools/CodeMetrics/TextFinder/CppTextFinder/Output/src/: Output.ixx  test.cpp
Tools/CodeMetrics/TextFinder/rs_textfinder_opt/RustTextFinder/: Cargo.toml
Tools/CodeMetrics/TextFinder/rs_textfinder_opt/RustTextFinder/src/: text_finder.rs
(+1969 files in other folders)
