[package]
name = "rs_textfinder_opt"
version = "1.2.0"
authors = ["James W. Fawcett <jfawcett@twcny.rr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "text_finder"
path = "src/text_finder.rs"

[dependencies]
dir_nav_lib = { package = "rust_dir_nav", path = "../RustDirNav" }
cmd_line_lib = { package = "rust_cmd_line", path = "../RustCmdLine" }
regex = "1.7.0"
#lazy_static = "1.4.0"